pow_fixed_model run

--- a/Simulations/pow_fixed_model.ipynb
+++ b/Simulations/pow_fixed_model.ipynb
@@ -3130,7 +3130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "id": "8f80a7ec",
    "metadata": {},
    "outputs": [
@@ -3138,8 +3138,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MoviePy - Building video Sim 2_kde_source_y_vs_$\\gamma$ (PWI)_animation.mov.\n",
-      "MoviePy - Writing video Sim 2_kde_source_y_vs_$\\gamma$ (PWI)_animation.mov\n",
+      "MoviePy - Building video Sim 2_kde_source_y_vs_e_animation.mov.\n",
+      "MoviePy - Writing video Sim 2_kde_source_y_vs_e_animation.mov\n",
       "\n"
      ]
     },
@@ -3155,14 +3155,14 @@
      "output_type": "stream",
      "text": [
       "MoviePy - Done !\n",
-      "MoviePy - video ready Sim 2_kde_source_y_vs_$\\gamma$ (PWI)_animation.mov\n",
-      "Video saved as Sim 2_kde_source_y_vs_$\\gamma$ (PWI)_animation.mov\n"
+      "MoviePy - video ready Sim 2_kde_source_y_vs_e_animation.mov\n",
+      "Video saved as Sim 2_kde_source_y_vs_e_animation.mov\n"
      ]
     }
    ],
    "source": [
     "# Select the variable to iterate over for the animation\n",
-    "variable_to_animate = '$\\gamma$ (PWI)'\n",
+    "variable_to_animate = 'e'\n",
     "\n",
     "# Select the variable to plot the KDE for\n",
     "variable_to_plot = 'source_y' # e.g., 'pos_rms', 'mag_rms', 'chi2'\n",
