split files into system 1 and system 2 + sim 1 run for system 2

--- a/Simulations/combined_fixed_model.ipynb
+++ b/Simulations/combined_fixed_model.ipynb
@@ -1688,6 +1688,81 @@
     "# Clean up the frames directory\n",
     "shutil.rmtree('frames')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "7088f4b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Building video pos_rms_animation.mp4.\n",
+      "MoviePy - Writing video pos_rms_animation.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                      \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done !\n",
+      "MoviePy - video ready pos_rms_animation.mp4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a directory for the frames\n",
+    "if os.path.exists('frames'):\n",
+    "    shutil.rmtree('frames')\n",
+    "os.makedirs('frames')\n",
+    "\n",
+    "# Get unique sorted values of 'e'\n",
+    "e_values = sorted(sie['$θ_{e}$'].unique())\n",
+    "\n",
+    "# Generate a plot for each value of 'e' and save it\n",
+    "for i, e in enumerate(e_values):\n",
+    "    mask_sie = sie[sie['$θ_{e}$'] == e]\n",
+    "    mask_pow = pow[pow['$θ_{e}$'] == e]\n",
+    "    mask_nfw = nfw[nfw['$θ_{e}$'] == e]\n",
+    "\n",
+    "    plt.figure(figsize=(8, 4))\n",
+    "    # Use a fixed range for the histogram bins for consistency across frames\n",
+    "    sns.kdeplot(mask_sie['pos_rms'], label='SIE', fill=True, alpha=0.5)\n",
+    "    sns.kdeplot(mask_pow['pos_rms'], label='POW', fill=True, alpha=0.5)\n",
+    "    sns.kdeplot(mask_nfw['pos_rms'], label='NFW', fill=True, alpha=0.5)\n",
+    "\n",
+    "    plt.xlabel('Position RMS (arcsec)')\n",
+    "    plt.ylabel('Count')\n",
+    "    plt.title(f'Position RMS Distribution for $θ$ = {e:.1f}')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True, alpha=0.2)  \n",
+    "    # Set a fixed y-axis limit for animation stability\n",
+    "    plt.ylim(0, 15)\n",
+    "    plt.xlim(0, 1.0)\n",
+    "    plt.tight_layout()\n",
+    "    \n",
+    "    # Save frame\n",
+    "    plt.savefig(f'frames/frame_{i:03d}.png')\n",
+    "    plt.close()\n",
+    "\n",
+    "# Create the animation from the saved frames\n",
+    "frame_files = [f'frames/frame_{i:03d}.png' for i in range(len(e_values))]\n",
+    "clip = mpy.ImageSequenceClip(frame_files, fps=5)\n",
+    "clip.write_videofile(\"pos_rms_animation.mp4\", codec=\"libx264\")\n",
+    "\n",
+    "# Clean up the frames directory\n",
+    "shutil.rmtree('frames')\n"
+   ]
   }
  ],
  "metadata": {
