--- a/Simulations/Output/combined_csv.ipynb
+++ b/Simulations/Output/combined_csv.ipynb
@@ -23,21 +23,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded Sim 12_summary_1.csv with shape (100000, 16)\n",
-      "Loaded Sim 12_summary_2.csv with shape (100000, 16)\n",
-      "Loaded Sim 12_summary_3.csv with shape (100000, 16)\n",
-      "Loaded Sim 12_summary_4.csv with shape (100000, 16)\n",
-      "Loaded Sim 12_summary_5.csv with shape (100000, 16)\n",
-      "Loaded Sim 12_summary_6.csv with shape (100000, 16)\n",
-      "Loaded Sim 12_summary_7.csv with shape (100000, 16)\n",
-      "Loaded Sim 12_summary_8.csv with shape (100000, 16)\n",
-      "Loaded Sim 12_summary_9.csv with shape (100000, 16)\n",
-      "Loaded Sim 12_summary_10.csv with shape (100000, 16)\n"
+      "Loaded System 2/Sim 1_summary_1.csv with shape (100000, 16)\n",
+      "Loaded System 2/Sim 1_summary_2.csv with shape (100000, 16)\n",
+      "Loaded System 2/Sim 1_summary_3.csv with shape (100000, 16)\n",
+      "Loaded System 2/Sim 1_summary_4.csv with shape (100000, 16)\n",
+      "Loaded System 2/Sim 1_summary_5.csv with shape (100000, 16)\n",
+      "Loaded System 2/Sim 1_summary_6.csv with shape (100000, 16)\n",
+      "Loaded System 2/Sim 1_summary_7.csv with shape (100000, 16)\n",
+      "Loaded System 2/Sim 1_summary_8.csv with shape (100000, 16)\n",
+      "Loaded System 2/Sim 1_summary_9.csv with shape (100000, 16)\n",
+      "Loaded System 2/Sim 1_summary_10.csv with shape (100000, 16)\n"
      ]
     }
    ],
    "source": [
-    "SIM_NAME = 'Sim 12'\n",
+    "SIM_NAME = 'System 2/Sim 1'\n",
     "NUM_FILES = 10\n",
     "\n",
     "def load_and_combine_simulation_data(sim_name, num_files):\n",
