added h0 and tds to testing sim ipynb

--- a/Simulations/testing_for_sim.ipynb
+++ b/Simulations/testing_for_sim.ipynb
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "5ce4dd0c",
    "metadata": {},
    "outputs": [],
@@ -609,6 +609,11 @@
     "        raise ValueError(\"No line with 'chi2' found in the file.\")\n",
     "    chi2_value = float(chi2_line.split('=')[-1].strip().split()[0])\n",
     "    num_lens_profiles = len(lens_params_dict)\n",
+    "\n",
+    "    if h0:\n",
+    "        hubble = next((line for line in opt_result if 'hubble =' in line), None)\n",
+    "        hubble = hubble.split('=')[-1].strip().split()[0]\n",
+    "\n",
     "\n",
     "    df = pd.DataFrame()\n",
     "    rows = []\n",
@@ -724,6 +729,7 @@
     "    out_point_file = os.path.join(model_path, f'{model_ver}_point.dat')\n",
     "    out_point = pd.read_csv(out_point_file, sep='\\s+', header=None, skiprows=1, names=columnn_names)\n",
     "\n",
+    "    td = list(out_point['pos_err'])\n",
     "    out_point.drop(columns=['mag_err', '1', '2', '3'], inplace=True)\n",
     "    mask = abs(out_point['mag']) >= 1\n",
     "    out_point = out_point[mask[:len(out_point)]].reset_index(drop=True)\n",
@@ -733,17 +739,35 @@
     "    out_point['pos_sq'] = np.sqrt((out_point['x_diff']**2 + out_point['y_diff']**2).astype(float))\n",
     "    pos_rms = np.average(out_point['pos_sq'])\n",
     "    mag_rms = np.average(np.sqrt((out_point['mag_diff']**2).astype(float)))\n",
-    "    return pos_rms, mag_rms, dfs, chi2_value, source_params"
+    "    return_values = (pos_rms, mag_rms, dfs, chi2_value, source_params)\n",
+    "    if time_delay:\n",
+    "        return_values += (td,)\n",
+    "    if h0:\n",
+    "        return_values += (hubble,)\n",
+    "    return return_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "id": "efcbbde1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pos_rms, mag_rms, dfs, chi2, source = rms_extract(model_name, model_output_dir, temp_input_py_file)\n",
+    "time_delay = True\n",
+    "h0 = True\n",
+    "\n",
+    "results = rms_extract(model_name, model_output_dir, temp_input_py_file)\n",
+    "\n",
+    "# Unpack the results dynamically\n",
+    "pos_rms, mag_rms, dfs, chi2, source = results[:5]\n",
+    "result_idx = 5\n",
+    "if time_delay:\n",
+    "    td = results[result_idx]\n",
+    "    result_idx += 1\n",
+    "if h0:\n",
+    "    hubble = results[result_idx]\n",
+    "\n",
     "if pos_rms == -1: raise IOError(\"rms_extract failed.\")\n",
     "\n",
     "num_images = 0\n",
@@ -787,12 +811,21 @@
     "            result_dict[col] = _safe_get(1, stripped_col)\n",
     "\n",
     "result_dict['source_x'] = source[0][1] if source and len(source) > 0 else 0\n",
-    "result_dict['source_y'] = source[0][2] if source and len(source) > 0 else 0"
+    "result_dict['source_y'] = source[0][2] if source and len(source) > 0 else 0\n",
+    "if time_delay:\n",
+    "    result_dict['time_delay'] = td\n",
+    "else:\n",
+    "    pass\n",
+    "\n",
+    "if h0:\n",
+    "    result_dict['hubble'] = hubble\n",
+    "else:\n",
+    "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "id": "d936dec3",
    "metadata": {},
    "outputs": [
@@ -803,21 +836,23 @@
        " 'n': 0.3,\n",
        " 'o': 0.7,\n",
        " 'num_images': 5,\n",
-       " 'pos_rms': 0.5206431707220018,\n",
-       " 'mag_rms': 18.6125,\n",
-       " 'chi2': 108000.1,\n",
-       " 'M': 1877439000000.0,\n",
-       " 'x': 20.86964,\n",
-       " 'y': 20.94406,\n",
-       " 'e': 0.107,\n",
-       " '$θ_{e}$': 23.38,\n",
-       " 'c or $r_{s}$': 20.0,\n",
+       " 'pos_rms': 0.005971416600399885,\n",
+       " 'mag_rms': 2.903675,\n",
+       " 'chi2': 187.8355,\n",
+       " 'M': 208501900000.0,\n",
+       " 'x': 20.80883,\n",
+       " 'y': 20.75339,\n",
+       " 'e': 0.1500295,\n",
+       " '$θ_{e}$': -4.432929,\n",
+       " 'c or $r_{s}$': 87.00426,\n",
        " 'NaN': 0.0,\n",
-       " 'source_x': 20.86232,\n",
-       " 'source_y': 20.94153}"
+       " 'source_x': 20.8127,\n",
+       " 'source_y': 20.77973,\n",
+       " 'time_delay': [1.308, 3.952, 0.0, 0.07, 0.21],\n",
+       " 'hubble': '0.7000'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
