random initial guess testing for nelder meade

--- a/Simulations/nelder-meade.ipynb
+++ b/Simulations/nelder-meade.ipynb
@@ -2086,8 +2086,8 @@
    "outputs": [],
    "source": [
     "for i in range(10):\n",
-    "    initial_e_physical = np.random.random_integers(0.0, 0.9)\n",
-    "    initial_theta_e = np.random.random_integers(0.0, 360.0)\n",
+    "    initial_e_physical = np.random.uniform(0.0, 0.9)\n",
+    "    initial_theta_e = np.random.randint(0, 360)\n",
     "\n",
     "    # --- TRANSFORM THE INITIAL GUESS ---\n",
     "    # We must convert our physical guess for 'e' into the 'e_log' space\n",
