difference between source and lens animation + combined two sim csvs

--- a/Simulations/Output/combined_csv.ipynb
+++ b/Simulations/Output/combined_csv.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "a9bb3962",
    "metadata": {},
    "outputs": [
@@ -23,21 +23,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded System 2/Sim 6_summary_1.csv with shape (100000, 16)\n",
-      "Loaded System 2/Sim 6_summary_2.csv with shape (100000, 16)\n",
-      "Loaded System 2/Sim 6_summary_3.csv with shape (100000, 16)\n",
-      "Loaded System 2/Sim 6_summary_4.csv with shape (100000, 16)\n",
-      "Loaded System 2/Sim 6_summary_5.csv with shape (100000, 16)\n",
-      "Loaded System 2/Sim 6_summary_6.csv with shape (100000, 16)\n",
-      "Loaded System 2/Sim 6_summary_7.csv with shape (100000, 16)\n",
-      "Loaded System 2/Sim 6_summary_8.csv with shape (100000, 16)\n",
-      "Loaded System 2/Sim 6_summary_9.csv with shape (100000, 16)\n",
-      "Loaded System 2/Sim 6_summary_10.csv with shape (100000, 16)\n"
+      "Loaded System 1/Sim 21_summary_1.csv with shape (100000, 16)\n",
+      "Loaded System 1/Sim 21_summary_2.csv with shape (100000, 16)\n",
+      "Loaded System 1/Sim 21_summary_3.csv with shape (100000, 16)\n",
+      "Loaded System 1/Sim 21_summary_4.csv with shape (100000, 16)\n",
+      "Loaded System 1/Sim 21_summary_5.csv with shape (100000, 16)\n",
+      "Loaded System 1/Sim 21_summary_6.csv with shape (100000, 16)\n",
+      "Loaded System 1/Sim 21_summary_7.csv with shape (100000, 16)\n",
+      "Loaded System 1/Sim 21_summary_8.csv with shape (100000, 16)\n",
+      "Loaded System 1/Sim 21_summary_9.csv with shape (100000, 16)\n",
+      "Loaded System 1/Sim 21_summary_10.csv with shape (100000, 16)\n"
      ]
     }
    ],
    "source": [
-    "SIM_NAME = 'System 2/Sim 6'\n",
+    "SIM_NAME = 'System 1/Sim 21'\n",
     "NUM_FILES = 10\n",
     "\n",
     "def load_and_combine_simulation_data(sim_name, num_files):\n",
@@ -58,6 +58,25 @@
     "    return combined_data\n",
     "\n",
     "combined_df = load_and_combine_simulation_data(SIM_NAME, NUM_FILES)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "beb37842",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def combine_multiple_simulations(sim_names, name):\n",
+    "    all_data = pd.DataFrame()\n",
+    "    for sim_name in sim_names:\n",
+    "        sim_data = pd.read_csv(f\"{sim_name}.csv\", header=0)\n",
+    "        all_data = pd.concat([all_data, sim_data], ignore_index=True)\n",
+    "    all_data.to_csv(f\"{name}_combined.csv\", index=False)\n",
+    "    return all_data\n",
+    "\n",
+    "simulation_names = ['System 1/Sim 1', 'System 1/Sim 21']\n",
+    "combined_simulations_df = combine_multiple_simulations(simulation_names, \"System 1 Combined\")"
    ]
   }
  ],
