testing neirenberg nm

--- a/Simulations/nelder-meade.ipynb
+++ b/Simulations/nelder-meade.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "id": "6f8c2c23",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "id": "b767ea82",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
          "type": "float"
         }
        ],
-       "ref": "be7b3938-3b1a-4330-b14f-01b6c25e988f",
+       "ref": "cb982936-2d6e-415f-af84-53a7a3e81bcb",
        "rows": [
         [
          "0",
@@ -1364,7 +1364,7 @@
        "[1000000 rows x 16 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3105,6 +3105,234 @@
     "plt.ylabel('Count')\n",
     "plt.title('Distribution of Initial and Final θ_e Values from Nelder-Mead Runs')\n",
     "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fcc15d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Step 2: Extracting data from DataFrame for interpolation...\n",
+      "Extracted 1000000 points for 3D interpolation.\n",
+      "\n",
+      "Step 3: Creating a 3D interpolation function from the data...\n",
+      "Interpolator function created successfully.\n",
+      "\n",
+      "Step 4: Running Nelder-Mead optimizer on the 3D interpolated surface...\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.interpolate import griddata\n",
+    "from mpl_toolkits.mplot3d import Axes3D # Required for 3D plotting\n",
+    "\n",
+    "# --- Nelder-Mead Optimizer Modified for 3 Parameters ---\n",
+    "def nelder_mead_glafic_with_history(func, x0, y0, z0, ftol=1e-4, nmax=10000, verbose=False):\n",
+    "    \"\"\"\n",
+    "    Nelder-Mead simplex optimization for 3 parameters, with tracking of all evaluation points.\n",
+    "    \"\"\"\n",
+    "    # Simplex coefficients\n",
+    "    ALPHA = 1.0  # reflection coefficient\n",
+    "    BETA = 0.5   # contraction coefficient\n",
+    "    GAMMA = 2.0  # expansion coefficient\n",
+    "\n",
+    "    n = 3  # number of dimensions\n",
+    "\n",
+    "    # Initialize simplex: 4 vertices for a 3D problem\n",
+    "    v = np.zeros((n + 1, n))\n",
+    "    f = np.zeros(n + 1)\n",
+    "\n",
+    "    # Track all evaluations\n",
+    "    eval_history = []\n",
+    "\n",
+    "    # Set initial simplex\n",
+    "    v[0] = [x0, y0, z0]\n",
+    "    dx = 0.1 * abs(x0) if x0 != 0 else 0.1\n",
+    "    dy = 0.1 * abs(y0) if y0 != 0 else 0.1\n",
+    "    dz = 0.1 * abs(z0) if z0 != 0 else 0.1\n",
+    "    v[1] = [x0 + dx, y0, z0]\n",
+    "    v[2] = [x0, y0 + dy, z0]\n",
+    "    v[3] = [x0, y0, z0 + dz]\n",
+    "\n",
+    "\n",
+    "    # Evaluate function at initial vertices and record\n",
+    "    for i in range(n + 1):\n",
+    "        f[i] = func(v[i][0], v[i][1], v[i][2])\n",
+    "        eval_history.append((v[i][0], v[i][1], v[i][2], f[i]))\n",
+    "\n",
+    "    # Main optimization loop\n",
+    "    for itr in range(1, nmax + 1):\n",
+    "        f_finite_indices = np.where(np.isfinite(f))[0]\n",
+    "        if len(f_finite_indices) < n + 1:\n",
+    "            vs = np.argmin(f)\n",
+    "            for i in range(n + 1):\n",
+    "                if i != vs:\n",
+    "                    v[i] = v[vs] + (v[i] - v[vs]) / 2.0\n",
+    "                    f[i] = func(v[i][0], v[i][1], v[i][2])\n",
+    "                    eval_history.append((v[i][0], v[i][1], v[i][2], f[i]))\n",
+    "            continue\n",
+    "\n",
+    "        f_temp_finite = f[f_finite_indices]\n",
+    "        vg_idx_finite = np.argmax(f_temp_finite)\n",
+    "        vs_idx_finite = np.argmin(f_temp_finite)\n",
+    "        \n",
+    "        vg = f_finite_indices[vg_idx_finite]\n",
+    "        vs = f_finite_indices[vs_idx_finite]\n",
+    "\n",
+    "        f_temp = f.copy()\n",
+    "        f_temp[vg] = -np.inf\n",
+    "        vh = np.argmax(f_temp)\n",
+    "\n",
+    "        vm = np.mean(v[[i for i in range(n + 1) if i != vg]], axis=0)\n",
+    "\n",
+    "        vr = vm + ALPHA * (vm - v[vg])\n",
+    "        fr = func(vr[0], vr[1], vr[2])\n",
+    "        eval_history.append((vr[0], vr[1], vr[2], fr))\n",
+    "        if np.isnan(fr): fr = np.inf\n",
+    "\n",
+    "        if f[vs] <= fr < f[vh]:\n",
+    "            v[vg], f[vg] = vr, fr\n",
+    "        elif fr < f[vs]:\n",
+    "            ve = vm + GAMMA * (vr - vm)\n",
+    "            fe = func(ve[0], ve[1], ve[2])\n",
+    "            eval_history.append((ve[0], ve[1], ve[2], fe))\n",
+    "            if np.isnan(fe): fe = np.inf\n",
+    "            \n",
+    "            if fe < fr:\n",
+    "                v[vg], f[vg] = ve, fe\n",
+    "            else:\n",
+    "                v[vg], f[vg] = vr, fr\n",
+    "        else:\n",
+    "            if fr < f[vg]:\n",
+    "                vc = vm + BETA * (vr - vm)\n",
+    "            else:\n",
+    "                vc = vm - BETA * (vm - v[vg])\n",
+    "            \n",
+    "            fc = func(vc[0], vc[1], vc[2])\n",
+    "            eval_history.append((vc[0], vc[1], vc[2], fc))\n",
+    "            if np.isnan(fc): fc = np.inf\n",
+    "\n",
+    "            if fc < f[vg]:\n",
+    "                v[vg], f[vg] = vc, fc\n",
+    "            else:\n",
+    "                for i in range(n + 1):\n",
+    "                    if i != vs:\n",
+    "                        v[i] = v[vs] + (v[i] - v[vs]) / 2.0\n",
+    "                        f[i] = func(v[i][0], v[i][1], v[i][2])\n",
+    "                        eval_history.append((v[i][0], v[i][1], v[i][2], f[i]))\n",
+    "        \n",
+    "        f_finite = f[np.isfinite(f)]\n",
+    "        if len(f_finite) < 2: continue\n",
+    "        max_f, min_f = np.max(f_finite), np.min(f_finite)\n",
+    "        \n",
+    "        rtol = 2.0 * abs(max_f - min_f) / (abs(max_f) + abs(min_f)) if (abs(max_f) + abs(min_f)) > 0 else 0.0\n",
+    "          \n",
+    "        if verbose:\n",
+    "            print(f\"Iteration {itr}: f_min = {min_f:.6e}, rtol = {rtol:.6e}\")\n",
+    "          \n",
+    "        if rtol < ftol:\n",
+    "            break\n",
+    "      \n",
+    "    vs = np.argmin(f)\n",
+    "    return v[vs][0], v[vs][1], v[vs][2], f[vs], eval_history\n",
+    "\n",
+    "\n",
+    "# --- Main Application ---\n",
+    "\n",
+    "\n",
+    "# 2. PREPARE DATA FOR INTERPOLATION\n",
+    "print(\"\\nStep 2: Extracting data from DataFrame for interpolation...\")\n",
+    "# It is crucial that the order of columns here matches the order of arguments (x, y, z)\n",
+    "# in the function the optimizer calls.\n",
+    "points = data[['e', '$θ_{e}$', '$\\\\sigma$']].values\n",
+    "\n",
+    "# Extract the chi2 column as a (N,) numpy array of values.\n",
+    "values = data['chi2'].values\n",
+    "print(f\"Extracted {len(values)} points for 3D interpolation.\")\n",
+    "\n",
+    "\n",
+    "# 3. CREATE THE INTERPOLATION FUNCTION\n",
+    "print(\"\\nStep 3: Creating a 3D interpolation function from the data...\")\n",
+    "def create_interpolated_chi2_func_with_bounds(points, values):\n",
+    "    \"\"\"\n",
+    "    Creates a callable function that interpolates chi2 values in 3D\n",
+    "    and enforces the physical constraint e >= 0.\n",
+    "    \"\"\"\n",
+    "    def chi2_interpolator_with_bounds(e, theta_e, phi):\n",
+    "        # --- CONSTRAINT CHECK ---\n",
+    "        # If ellipticity is negative, return infinity to penalize the optimizer.\n",
+    "        if e < 0:\n",
+    "            return np.inf\n",
+    "\n",
+    "        # Proceed with 3D interpolation\n",
+    "        chi2 = griddata(points, values, (e, theta_e, phi), method='linear', fill_value=np.inf)\n",
+    "        return chi2\n",
+    "        \n",
+    "    return chi2_interpolator_with_bounds\n",
+    "\n",
+    "interpolated_chi2 = create_interpolated_chi2_func_with_bounds(points, values)\n",
+    "print(\"Interpolator function created successfully.\")\n",
+    "\n",
+    "\n",
+    "# 4. RUN THE OPTIMIZER\n",
+    "print(\"\\nStep 4: Running Nelder-Mead optimizer on the 3D interpolated surface...\")\n",
+    "# Start the search from a point within your data range\n",
+    "initial_e = 0.55\n",
+    "initial_theta_e = 195\n",
+    "initial_phi = 240\n",
+    "\n",
+    "e_min, theta_e_min, phi_min, chi2_min, history = nelder_mead_glafic_with_history(\n",
+    "    interpolated_chi2,\n",
+    "    initial_e,\n",
+    "    initial_theta_e,\n",
+    "    initial_phi,\n",
+    "    verbose=True\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# 5. PRINT RESULTS\n",
+    "print(\"\\n--- Optimization Finished ---\")\n",
+    "print(f\"Initial Guess: (e={initial_e}, θe={initial_theta_e}, phi={initial_phi})\")\n",
+    "print(f\"Found Minimum Chi-squared (interpolated): {chi2_min:.6f}\")\n",
+    "print(f\"At Parameters: (e={e_min:.4f}, θe={theta_e_min:.4f}, phi={phi_min:.4f})\")\n",
+    "print(f\"Total Interpolator Evaluations: {len(history)}\")\n",
+    "\n",
+    "\n",
+    "# 6. VISUALIZE THE RESULT (3D Scatter Plot)\n",
+    "print(\"\\nStep 6: Visualizing the results in 3D...\")\n",
+    "fig = plt.figure(figsize=(12, 10))\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "\n",
+    "# Scatter plot of the original data points\n",
+    "# Color-coded by chi2 value\n",
+    "sc = ax.scatter(data['e'], data['$θ_{e}$'], data['phi'], c=data['chi2'], cmap='viridis', s=100, label='Original Data Points')\n",
+    "plt.colorbar(sc, ax=ax, label='Chi-Squared')\n",
+    "\n",
+    "# Extract history for plotting the optimizer's path\n",
+    "hist_e = [p[0] for p in history]\n",
+    "hist_theta_e = [p[1] for p in history]\n",
+    "hist_phi = [p[2] for p in history]\n",
+    "ax.plot(hist_e, hist_theta_e, hist_phi, 'w-o', markersize=3, alpha=0.8, label='Optimizer Path')\n",
+    "\n",
+    "# Plot key points\n",
+    "ax.plot([initial_e], [initial_theta_e], [initial_phi], 'ro', markersize=10, label='Initial Guess')\n",
+    "ax.plot([e_min], [theta_e_min], [phi_min], 'g*', markersize=18, markeredgecolor='k', label=f'Found Minimum')\n",
+    "\n",
+    "ax.set_xlabel('Parameter e')\n",
+    "ax.set_ylabel('Parameter $θ_{e}$ (°)')\n",
+    "ax.set_zlabel('Parameter phi')\n",
+    "ax.set_title('3D Optimization on Interpolated Surface')\n",
+    "ax.legend()\n",
     "plt.show()"
    ]
   }
