code cleanup for nelder meade ipynb

--- a/Simulations/nelder-meade.ipynb
+++ b/Simulations/nelder-meade.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6f8c2c23",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,9 @@
     "import os\n",
     "import moviepy as mp\n",
     "import shutil\n",
-    "import tqdm"
+    "import tqdm\n",
+    "from scipy.interpolate import griddata\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -1427,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "a1b9b085",
    "metadata": {},
    "outputs": [
@@ -1512,18 +1514,11 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.interpolate import griddata\n",
     "\n",
-    "# (Paste your nelder_mead_glafic_with_history function here)\n",
-    "# This function does not need any changes.\n",
     "def nelder_mead_glafic_with_history(func, x0, y0, ftol=1e-4, nmax=10000, verbose=False):\n",
     "    \"\"\"\n",
     "    Nelder-Mead simplex optimization matching glafic's implementation,\n",
     "    with tracking of all evaluation points.\n",
-    "    ... (full code from your prompt) ...\n",
     "    \"\"\"\n",
     "    # Simplex coefficients from glafic\n",
     "    ALPHA = 1.0  # reflection coefficient\n",
@@ -1639,19 +1634,8 @@
     "    return v[vs][0], v[vs][1], f[vs], eval_history\n",
     "\n",
     "\n",
-    "# --- Main Application ---\n",
     "\n",
-    "# 1. LOAD YOUR DATA\n",
-    "# For demonstration, we create a sample DataFrame.\n",
-    "# !!! IN YOUR CODE, REPLACE THIS BLOCK WITH:\n",
-    "# !!! data = pd.read_csv('your_file.csv')\n",
-    "\n",
-    "\n",
-    "# 2. PREPARE DATA FOR INTERPOLATION\n",
     "print(\"\\nStep 2: Extracting data from DataFrame for interpolation...\")\n",
-    "# Extract the parameter columns as a (N, 2) numpy array of points.\n",
-    "# It is crucial that the order of columns here ('e', '$θ_{e}$') matches\n",
-    "# the order of arguments (x, y) in the function the optimizer calls.\n",
     "points = mask_data[['e', '$θ_{e}$']].values\n",
     "\n",
     "# Extract the chi2 column as a (N,) numpy array of values.\n",
@@ -1685,7 +1669,6 @@
     "\n",
     "# 4. RUN THE OPTIMIZER\n",
     "print(\"\\nStep 4: Running Nelder-Mead optimizer on the interpolated surface...\")\n",
-    "# It's good practice to start the search from a point within your data range\n",
     "initial_e = 0.6\n",
     "initial_theta_e = 200\n",
     "\n",
@@ -1696,16 +1679,12 @@
     "    verbose=True\n",
     ")\n",
     "\n",
-    "\n",
-    "# 5. PRINT RESULTS\n",
     "print(\"\\n--- Optimization Finished ---\")\n",
     "print(f\"Initial Guess: (e={initial_e}, θe={initial_theta_e})\")\n",
     "print(f\"Found Minimum Chi-squared (interpolated): {chi2_min:.6f}\")\n",
     "print(f\"At Parameters: (e={e_min:.4f}, θe={theta_e_min:.4f})\")\n",
     "print(f\"Total Interpolator Evaluations: {len(history)}\")\n",
     "\n",
-    "\n",
-    "# 6. VISUALIZE THE RESULT\n",
     "print(\"\\nStep 5: Visualizing the results...\")\n",
     "plt.figure(figsize=(10, 8))\n",
     "\n",
@@ -1731,7 +1710,6 @@
     "plt.plot(e_min, theta_e_min, 'g*', markersize=18, markeredgecolor='k', label=f'Found Minimum ({e_min:.2f}, {theta_e_min:.2f})')\n",
     "\n",
     "plt.xlabel('Parameter e')\n",
-    "# You can use LaTeX formatting in plot labels\n",
     "plt.ylabel('Parameter $θ_{e}$ (°)')\n",
     "plt.title('Optimization on Interpolated Surface from DataFrame')\n",
     "plt.legend()\n",
