--- a/Final/SIE.ipynb
+++ b/Final/SIE.ipynb
@@ -36,6 +36,7 @@
     "from scipy.stats import gaussian_kde\n",
     "import seaborn as sns\n",
     "import plotly.graph_objects as go\n",
+    "from scipy.interpolate import griddata\n",
     "\n",
     "from matplotlib.lines import Line2D\n",
     "os.chdir(\"/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling\")"
@@ -48,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Simulation/sim_3.csv', header=0)"
+    "df = pd.read_csv('/Volumes/T7 Shield/Simulation Output/System 1/Sim 1.csv', header=0)"
    ]
   },
   {
@@ -66,18 +67,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "325c4273",
+   "id": "4da48a55",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.interpolate import griddata\n",
-    "\n",
-    "fig = plt.figure(figsize=(10, 8))\n",
-    "ax = fig.add_subplot(111, projection='3d')\n",
-    "\n",
-    "# Create a grid of x and y values\n",
-    "x = df['t_shear_str'].values\n",
-    "y = df['t_shear_kappa'].values\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6400c658",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['PERT_$\\\\kappa$'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee65f7ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = df['PERT_$\\gamma$'].values\n",
+    "y = df['PERT_$\\kappa$'].values\n",
     "z = df['pos_rms'].values\n",
     "\n",
     "# Remove NaN values\n",
@@ -92,22 +107,19 @@
     "xi, yi = np.meshgrid(xi, yi)\n",
     "\n",
     "# Interpolate z values on regular grid\n",
-    "zi = griddata((x, y), z, (xi, yi), method='cubic')\n",
-    "\n",
-    "# Plot surface\n",
-    "surf = ax.plot_surface(xi, yi, zi, cmap='magma', alpha=1)\n",
-    "\n",
-    "# Plot scattered points\n",
-    "scatter = ax.scatter(x, y, z, c=z, cmap='magma', alpha=0)\n",
-    "\n",
-    "ax.set_xlabel('Shear Strength', color = 'w')\n",
-    "ax.set_ylabel('Shear Kappa', color = 'w')\n",
-    "ax.set_zlabel('Position RMS', color = 'w')\n",
-    "\n",
-    "fig.colorbar(surf, label='Position RMS', ax=ax)\n",
-    "plt.title('3D Plot of Shear Parameters vs Position RMS', color = 'w')\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "zi = griddata((x, y), z, (xi, yi), method='linear')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a94ad76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vmin = np.nanmin(zi[zi>0])\n",
+    "vmax = np.nanmax(zi)\n",
+    "norm = ImageNormalize(vmin=vmin, vmax=vmax, stretch=LogStretch())"
    ]
   },
   {
@@ -121,7 +133,7 @@
     "plt.figure(figsize=(12, 8))\n",
     "\n",
     "# Create the contour plot using the same data\n",
-    "contour = plt.contourf(xi, yi, zi, levels=50, cmap='magma')\n",
+    "contour = plt.contourf(xi, yi, zi, levels=100, cmap='inferno', norm=norm)\n",
     "\n",
     "# Add a colorbar\n",
     "plt.colorbar(contour, label='Position RMS')\n",
@@ -135,9 +147,6 @@
     "plt.style.use('dark_background')\n",
     "plt.grid(True, alpha=0.2)\n",
     "\n",
-    "# Adjust layout\n",
-    "plt.tight_layout()\n",
-    "\n",
     "# Show the plot\n",
     "plt.show()\n"
    ]
@@ -150,45 +159,62 @@
    "outputs": [],
    "source": [
     "one_sigma = 0.001\n",
-    "sigma_levels = [1, 5, 10]\n",
+    "sigma_levels = [1, 3, 5]\n",
     "\n",
     "# Create a figure with subplots\n",
-    "plt.figure(figsize=(12, 8))\n",
+    "fig, axes = plt.subplots(1, len(sigma_levels), figsize=(15, 5), sharey=True)\n",
     "\n",
-    "for i in range(len(sigma_levels)):\n",
-    "    # Create a subplot for each sigma level\n",
-    "    ax = plt.subplot(1, len(sigma_levels), i + 1)\n",
-    "    \n",
+    "for i, ax in enumerate(axes):\n",
     "    # Filter data based on sigma level\n",
     "    mask = (df['pos_rms'] <= one_sigma * sigma_levels[i])\n",
     "    filtered_df = df[mask]\n",
     "    \n",
     "    # Create grid for contour plot\n",
-    "    xi = np.linspace(filtered_df['t_shear_str'].min(), filtered_df['t_shear_str'].max(), 100)\n",
-    "    yi = np.linspace(filtered_df['t_shear_kappa'].min(), filtered_df['t_shear_kappa'].max(), 100)\n",
+    "    xi = np.linspace(filtered_df['PERT_$\\gamma$'].min(), filtered_df['PERT_$\\gamma$'].max(), 100)\n",
+    "    yi = np.linspace(filtered_df['PERT_$\\kappa$'].min(), filtered_df['PERT_$\\kappa$'].max(), 100)\n",
     "    xi, yi = np.meshgrid(xi, yi)\n",
     "    \n",
     "    # Interpolate z values\n",
-    "    zi = griddata((filtered_df['t_shear_str'], filtered_df['t_shear_kappa']), \n",
+    "    zi = griddata((filtered_df['PERT_$\\gamma$'], filtered_df['PERT_$\\kappa$']), \n",
     "                 filtered_df['pos_rms'], (xi, yi), method='cubic')\n",
     "    \n",
-    "    # Create contour plot\n",
-    "    ax.contourf(xi, yi, zi, levels=50, cmap='magma')\n",
+    "    # Create contour plot using the common norm\n",
+    "    contour = ax.contourf(xi, yi, zi, levels=100, cmap='inferno', norm=norm)\n",
+    "    \n",
     "    ax.set_title(f'{sigma_levels[i]} $\\sigma$', color='w')\n",
     "    ax.set_xlabel('Shear Strength', color='w')\n",
-    "    ax.set_ylabel('Shear Kappa', color='w')\n",
-    "    ax.set_facecolor('black')\n",
+    "    if i == 0:\n",
+    "        ax.set_ylabel('Shear Kappa', color='w')\n",
+    "    ax.set_facecolor('white')\n",
     "    ax.tick_params(colors='w')\n",
     "    ax.grid(True, alpha=0.2)\n",
     "\n",
-    "plt.tight_layout()\n",
+    "# Add common colorbar\n",
+    "cbar = fig.colorbar(contour, ax=axes, label='Position RMS')\n",
+    "cbar.ax.yaxis.label.set_color('w')\n",
+    "cbar.ax.tick_params(colors='w')\n",
+    "\n",
     "plt.show()"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
