--- a/Final/SIE.ipynb
+++ b/Final/SIE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "id": "3646cb5e",
    "metadata": {},
    "outputs": [],
@@ -38,8 +38,10 @@
     "import plotly.graph_objects as go\n",
     "from scipy.interpolate import griddata\n",
     "import matplotlib.ticker as ticker\n",
+    "import shutil\n",
     "\n",
     "from matplotlib.lines import Line2D\n",
+    "import moviepy as mpy\n",
     "os.chdir(\"/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling\")"
    ]
   },
@@ -3177,6 +3179,97 @@
     "cbar.ax.tick_params(colors='w')\n",
     "plt.suptitle('SIE Models with Each Image Positional RMS within Different Sigma Levels (1$\\sigma$ = 1 mas)', color='w', fontsize=16)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "e518e7f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Building video sigma_animation.mp4.\n",
+      "MoviePy - Writing video sigma_animation.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                        \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done !\n",
+      "MoviePy - video ready sigma_animation.mp4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Animation settings\n",
+    "if os.path.exists('frames'):\n",
+    "    shutil.rmtree('frames')\n",
+    "os.makedirs('frames')\n",
+    "\n",
+    "fps = 20\n",
+    "duration = 10  # seconds\n",
+    "total_frames = int(duration * fps)\n",
+    "sigma_start = 0.1\n",
+    "sigma_end = 10\n",
+    "\n",
+    "# Create array of sigma values for each frame\n",
+    "sigma_values = np.linspace(sigma_start, sigma_end, total_frames)\n",
+    "\n",
+    "vmin = 1e-5\n",
+    "vmax = 0.01\n",
+    "norm = ImageNormalize(vmin=vmin, vmax=vmax, stretch=LogStretch())\n",
+    "\n",
+    "\n",
+    "for i in range(len(sigma_values)):\n",
+    "    mask = (df['pos_rms'] <= one_sigma * sigma_values[i])\n",
+    "    filtered_df = df[mask]\n",
+    "    \n",
+    "    # Create grid for contour plot\n",
+    "    xi = np.linspace(filtered_df['PERT_$\\gamma$'].min(), filtered_df['PERT_$\\gamma$'].max(), 100)\n",
+    "    yi = np.linspace(filtered_df['PERT_$\\kappa$'].min(), filtered_df['PERT_$\\kappa$'].max(), 100)\n",
+    "    xi, yi = np.meshgrid(xi, yi)\n",
+    "    \n",
+    "    # Interpolate z values\n",
+    "    zi = griddata((filtered_df['PERT_$\\gamma$'], filtered_df['PERT_$\\kappa$']), \n",
+    "                 filtered_df['pos_rms'], (xi, yi), method='cubic')\n",
+    "    \n",
+    "    plt.figure(figsize=(8, 10))\n",
+    "    contour = plt.contourf(xi, yi, zi, levels=100, cmap='inferno', norm=norm)\n",
+    "    plt.title(f'{sigma_values[i]:.2f} $\\sigma$', color='w')\n",
+    "    plt.xlabel('External Shear Strength', color='w')\n",
+    "    plt.ylabel('External Shear Convergence', color='w')\n",
+    "    plt.gca().set_facecolor('white')\n",
+    "    plt.gca().tick_params(colors='w')\n",
+    "    plt.xlim(0.001, 0.1)\n",
+    "    plt.ylim(-0.5, 0.5)\n",
+    "    \n",
+    "    # Correctly add colorbar using the local contour object\n",
+    "    cbar = plt.colorbar(contour, label='Position RMS (mas)', orientation='vertical', fraction=0.09, pad=0.04, format=ticker.FuncFormatter(lambda x, pos: f'{x*1000:.2f}'))\n",
+    "    cbar.ax.yaxis.label.set_color('w')\n",
+    "    cbar.ax.tick_params(colors='w')\n",
+    "    \n",
+    "    plt.savefig(f'frames/frame_{i:03d}.png')\n",
+    "    plt.close()\n",
+    "\n",
+    "# Create the animation from the saved frames\n",
+    "frame_files = [f'frames/frame_{i:03d}.png' for i in range(len(sigma_values))]\n",
+    "clip = mpy.ImageSequenceClip(frame_files, fps=10)\n",
+    "clip.write_videofile(\"sigma_animation.mp4\", codec=\"libx264\")\n",
+    "\n",
+    "# Clean up the frames directory\n",
+    "shutil.rmtree('frames')"
    ]
   },
   {
