added sie param animation code

--- a/Final/SIE.ipynb
+++ b/Final/SIE.ipynb
@@ -6136,10 +6136,68 @@
     "                 filtered_df['pos_rms'], (xi, yi), method='cubic')\n",
     "    \n",
     "    plt.figure(figsize=(8, 10))\n",
+    "    plt.scatter(filtered_df['SIE_e'], filtered_df['SIE_$θ_{e}$'], c=filtered_df['pos_rms'], cmap='inferno', norm=norm, s=5)\n",
+    "    plt.xlabel('SIE Ellipticity', color='w')\n",
+    "    plt.ylabel('SIE Position Angle', color='w')\n",
+    "    plt.title(f'{sigma_values[i]:.2f} $\\sigma$', color='w')\n",
+    "    plt.tick_params(colors='w')\n",
+    "    \n",
+    "    plt.savefig(f'frames/frame_{i:03d}.png')\n",
+    "    plt.close()\n",
+    "\n",
+    "# Create the animation from the saved frames\n",
+    "frame_files = [f'frames/frame_{i:03d}.png' for i in range(len(sigma_values))]\n",
+    "clip = mpy.ImageSequenceClip(frame_files, fps=10)\n",
+    "clip.write_videofile(\"sigma_animation.mp4\", codec=\"libx264\")\n",
+    "\n",
+    "# Clean up the frames directory\n",
+    "shutil.rmtree('frames')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c2ff75b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Animation settings\n",
+    "if os.path.exists('frames'):\n",
+    "    shutil.rmtree('frames')\n",
+    "os.makedirs('frames')\n",
+    "\n",
+    "fps = 20\n",
+    "duration = 10  # seconds\n",
+    "total_frames = int(duration * fps)\n",
+    "sigma_start = 0.1\n",
+    "sigma_end = 10\n",
+    "\n",
+    "# Create array of sigma values for each frame\n",
+    "sigma_values = np.linspace(sigma_start, sigma_end, total_frames)\n",
+    "\n",
+    "vmin = 1e-5\n",
+    "vmax = 0.01\n",
+    "norm = ImageNormalize(vmin=vmin, vmax=vmax, stretch=LogStretch())\n",
+    "\n",
+    "\n",
+    "for i in range(len(sigma_values)):\n",
+    "    mask = (df['pos_rms'] <= one_sigma * sigma_values[i])\n",
+    "    filtered_df = df[mask]\n",
+    "    \n",
+    "    # Create grid for contour plot\n",
+    "    xi = np.linspace(filtered_df['SIE_e'].min(), filtered_df['SIE_e'].max(), 100)\n",
+    "    yi = np.linspace(filtered_df['SIE_$θ_{e}$'].min(), filtered_df['SIE_$θ_{e}$'].max(), 100)\n",
+    "    xi, yi = np.meshgrid(xi, yi)\n",
+    "    \n",
+    "    # Interpolate z values\n",
+    "    zi = griddata((filtered_df['SIE_e'], filtered_df['SIE_$θ_{e}$']), \n",
+    "                 filtered_df['pos_rms'], (xi, yi), method='cubic')\n",
+    "    \n",
+    "    plt.figure(figsize=(8, 10))\n",
     "    contour = plt.contourf(xi, yi, zi, levels=100, cmap='inferno', norm=norm)\n",
     "    plt.title(f'{sigma_values[i]:.2f} $\\sigma$', color='w')\n",
-    "    plt.xlabel('External Shear Strength', color='w')\n",
-    "    plt.ylabel('External Shear Convergence', color='w')\n",
+    "    plt.xlabel('SIE Ellipticity', color='w')\n",
+    "    plt.ylabel('SIE Position Angle', color='w')\n",
     "    plt.gca().set_facecolor('white')\n",
     "    plt.gca().tick_params(colors='w')\n",
     "    plt.xlim(0.001, 0.1)\n",
@@ -6156,7 +6214,7 @@
     "# Create the animation from the saved frames\n",
     "frame_files = [f'frames/frame_{i:03d}.png' for i in range(len(sigma_values))]\n",
     "clip = mpy.ImageSequenceClip(frame_files, fps=10)\n",
-    "clip.write_videofile(\"sigma_animation.mp4\", codec=\"libx264\")\n",
+    "clip.write_videofile(\"sie_param_animation.mp4\", codec=\"libx264\")\n",
     "\n",
     "# Clean up the frames directory\n",
     "shutil.rmtree('frames')"
