--- a/Final/SIE.ipynb
+++ b/Final/SIE.ipynb
@@ -6156,10 +6156,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "8c2ff75b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Building video sie_param_animation.mp4.\n",
+      "MoviePy - Writing video sie_param_animation.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                        \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done !\n",
+      "MoviePy - video ready sie_param_animation.mp4\n"
+     ]
+    }
+   ],
    "source": [
     "# Animation settings\n",
     "if os.path.exists('frames'):\n",
@@ -6198,10 +6223,11 @@
     "    plt.title(f'{sigma_values[i]:.2f} $\\sigma$', color='w')\n",
     "    plt.xlabel('SIE Ellipticity', color='w')\n",
     "    plt.ylabel('SIE Position Angle', color='w')\n",
-    "    plt.gca().set_facecolor('white')\n",
+    "    plt.gca().set_facecolor('black')\n",
     "    plt.gca().tick_params(colors='w')\n",
-    "    plt.xlim(0.001, 0.1)\n",
-    "    plt.ylim(-0.5, 0.5)\n",
+    "    plt.xlim(0.16, 0.26)\n",
+    "    plt.ylim(-50, 50)\n",
+    "\n",
     "    \n",
     "    # Correctly add colorbar using the local contour object\n",
     "    cbar = plt.colorbar(contour, label='Position RMS (mas)', orientation='vertical', fraction=0.09, pad=0.04, format=ticker.FuncFormatter(lambda x, pos: f'{x*1000:.2f}'))\n",
